# docs/swagger.json
@@ -24,7 +24,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Balance"
+                    "User"
                 ],
                 "summary": "Balance",
                 "responses": {
@@ -44,7 +44,6 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Destinations",
                     "Receive"
                 ],
                 "summary": "Given an invoiceID, a set of outputs and fees will be returned, if not found a 404 is returned.",
@@ -80,7 +79,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invoices"
+                    "Receive"
                 ],
                 "summary": "Invoices",
                 "responses": {
@@ -98,7 +97,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invoices"
+                    "Receive"
                 ],
                 "summary": "InvoiceCreate invoices",
                 "parameters": [
@@ -129,7 +128,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invoices"
+                    "Receive"
                 ],
                 "summary": "Invoices",
                 "parameters": [
@@ -156,7 +155,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Invoices"
+                    "Receive"
                 ],
                 "summary": "InvoiceDelete invoices",
                 "parameters": [
@@ -191,7 +190,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Users"
+                    "User"
                 ],
                 "summary": "Wallet owner information.",
                 "responses": {
@@ -213,7 +212,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Pay"
+                    "Send"
                 ],
                 "summary": "Make a payment",
                 "parameters": [
@@ -244,7 +243,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Payment"
+                    "Receive"
                 ],
                 "summary": "Request to pay an invoice and receive back outputs to use when constructing the payment transaction",
                 "parameters": [
@@ -284,9 +283,9 @@
                 }
             }
         },
-        "/api/v1/payments/{invoiceID}": {
+        "/api/v1/payments/{paymentID}": {
             "post": {
-                "description": "Given an invoiceID, and an spvEnvelope, we will validate the payment and inputs used are valid and that it covers the invoice.",
+                "description": "Given an paymentID, and an spvEnvelope, we will validate the payment and inputs used are valid and that it covers the payment.",
                 "consumes": [
                     "application/json"
                 ],
@@ -294,14 +293,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Payments"
+                    "Receive"
                 ],
                 "summary": "Validate and store a payment.",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Invoice ID",
-                        "name": "invoiceID",
+                        "description": "Payment ID",
+                        "name": "paymentID",
                         "in": "path",
                         "required": true
                     }
@@ -311,13 +310,13 @@
                         "description": ""
                     },
                     "400": {
-                        "description": "returned if the invoiceID is empty or payment isn't valid",
+                        "description": "returned if the paymentID is empty or payment isn't valid",
                         "schema": {
                             "$ref": "#/definitions/payd.ClientError"
                         }
                     },
                     "404": {
-                        "description": "returned if the invoiceID has not been found",
+                        "description": "returned if the paymentID has not been found",
                         "schema": {
                             "$ref": "#/definitions/payd.ClientError"
                         }
@@ -335,7 +334,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Proofs"
+                    "Receive"
                 ],
                 "summary": "InvoiceCreate proof",
                 "parameters": [
